Update/Modif file .coba.html

--- a/coba.html
+++ b/coba.html
@@ -7,5 +7,8 @@
 </head>
 <body>
 
+    <h1>Welcome to Git Remote Guide</h1>
+    <p>This page will help you understand how to work with Git remotes effectively.</p>
+
 </body>
 </html>
