Update lagi file coba.html

--- a/coba.html
+++ b/coba.html
@@ -9,6 +9,8 @@
 
     <h1>Welcome to Git Remote Guide</h1>
     <p>This page will help you understand how to work with Git remotes effectively.</p>
+    <p>Learn how to add, remove, and manage Git remotes in your projects.</p>
+    <p>Mastering Git remotes is essential for collaboration in software development.</p>
 
 </body>
 </html>
